--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <button type="button" class="btn btn-secondary btn-sm ms-3 mt-3">< Dashboard</button>
   <div class="container">
     <form action="/feedback" method="post">
       <div class="row justify-content-center mt-5">
