--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <form action="/feedback" method="post">
       <div class="row justify-content-center mt-5">
-        <h1>Feedback and complaints</h1>
+        <h1 style="background-color: #C79CFF">Feedback and complaints</h1>
         <div class="mb-3 mt-2">
           <label for="title" class="form-label">Title</label>
           <input type="text" class="form-control" id="title">
